; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_typegen.c_write_base_type.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_typegen.c_write_base_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TYPE_BASIC = common dso_local global i64 0, align 8
@TYPE_ENUM = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [18 x i8] c"0x%02x,\09/* %s */\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*)* @write_base_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @write_base_type(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8, align 1
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %9 = load i32*, i32** %6, align 8
  %10 = call i64 @type_get_type(i32* %9)
  %11 = load i64, i64* @TYPE_BASIC, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %16

13:                                               ; preds = %3
  %14 = load i32*, i32** %6, align 8
  %15 = call zeroext i8 @get_basic_fc_signed(i32* %14)
  store i8 %15, i8* %8, align 1
  br label %26

16:                                               ; preds = %3
  %17 = load i32*, i32** %6, align 8
  %18 = call i64 @type_get_type(i32* %17)
  %19 = load i64, i64* @TYPE_ENUM, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %24

21:                                               ; preds = %16
  %22 = load i32*, i32** %6, align 8
  %23 = call zeroext i8 @get_enum_fc(i32* %22)
  store i8 %23, i8* %8, align 1
  br label %25

24:                                               ; preds = %16
  store i32 0, i32* %4, align 4
  br label %35

25:                                               ; preds = %21
  br label %26

26:                                               ; preds = %25, %13
  %27 = load i32*, i32** %5, align 8
  %28 = load i8, i8* %8, align 1
  %29 = load i8, i8* %8, align 1
  %30 = call i32 @string_of_type(i8 zeroext %29)
  %31 = call i32 @print_file(i32* %27, i32 2, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i8 zeroext %28, i32 %30)
  %32 = load i32*, i32** %7, align 8
  %33 = load i32, i32* %32, align 4
  %34 = add i32 %33, 1
  store i32 %34, i32* %32, align 4
  store i32 1, i32* %4, align 4
  br label %35

35:                                               ; preds = %26, %24
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}

declare dso_local i64 @type_get_type(i32*) #1

declare dso_local zeroext i8 @get_basic_fc_signed(i32*) #1

declare dso_local zeroext i8 @get_enum_fc(i32*) #1

declare dso_local i32 @print_file(i32*, i32, i8*, i8 zeroext, i32) #1

declare dso_local i32 @string_of_type(i8 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
